--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,10 +2,7 @@ steps:
   - name: "gcr.io/cloud-builders/npm"
     args: ["install"]
   - name: "gcr.io/cloud-builders/npm"
-    args:
-      - run
-      - test
-      - -q
+    args: ["run", "test:unit"]
   - name: "gcr.io/cloud-builders/npm"
     args: ["run", "build"]
   - name: "gcr.io/$PROJECT_ID/firebase"
